--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "laravel/framework": "5.*",
     "guzzlehttp/guzzle": "~6.0",
     "doctrine/dbal": "^2.5",
-    "intercom/intercom-php": "^3.1-stable"
+    "intercom/intercom-php": "^3.1-stable",
+    "nesbot/carbon": "~1.18"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
