--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,9 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Your Name",
-      "email": "your.email@email.com",
-      "homepage": "http://yourwebsite.com",
-      "role": "Your Role"
+      "name": "Jonathan Maingot",
+      "email": "jonathan@drumeo.com",
+      "role": "Developer"
     }
   ],
   "prefer-stable": true,
