--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,10 @@
     "php": "~7",
     "laravel/framework": "5.*",
     "guzzlehttp/guzzle": "~6.0",
-    "doctrine/dbal": "^2.5",
-    "intercom/intercom-php": "^3.1-stable",
-    "nesbot/carbon": "~1.18"
+    "intercom/intercom-php": "^3.1-stable"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
-    "phpunit/php-code-coverage": "4.0.5",
-    "orchestra/database": "3.4.x@dev",
     "orchestra/testbench": "~3.4"
   },
   "autoload": {
